# algs_training

./: .gitignore  CMakeLists.txt  README.md
include/: algs_basic.h
src/: algs_basic.cpp
test/: test_basic.cpp
util/: util.cpp  util.h
